# mediatech-to-albert-api

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  PLAN-PHASE-2.md  PLAN.md  README.md  debug.sh  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements.txt  sync.py  test_retrieval.sh
.github/workflows/: docker.yml
src/: __init__.py  albert_client.py  config.py  display.py  huggingface_source.py  models.py  notifier.py  state_store.py  sync_service.py
tests/: conftest.py  manuel_test_commands.sh  test_e2e_dole.py  test_huggingface_source.py  test_retrieval.py  test_retrieval.sh  test_sync_service.py
